[package]
name = "seven-blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
dotenv = "0.15"
thiserror = "1.0"
utoipa = { version = "4.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["rocket"] }
argon2 = "0.5"
